Refactor music playback functions and update controls for next music feature

--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
                 <button id="carNextBtn" class="car-nav-btn">›</button>
             </div> -->
 
+            <div style="display: flex; flex-direction: row; gap: 12px; align-items: center;">
+                <button id="matchBtn" class="landing-play-btn">MATCH</button>
+                <button id="freeplayBtn" class="landing-play-btn" style="background: linear-gradient(135deg, #4facfe, #00f2fe);">FREEPLAY</button>
+            </div>
+
             <div class="landing-title">
                 <span class="landing-title-main">Rocket Decals Game</span>
                 <span class="landing-title-sub">by Erlow</span>
-            </div>
-            
-            <div style="display: flex; flex-direction: row; gap: 12px; align-items: center; justify-content: center;">
-                <button id="matchBtn" class="landing-play-btn">MATCH</button>
-                <button id="freeplayBtn" class="landing-play-btn" style="background: linear-gradient(135deg, #4facfe, #00f2fe);">FREEPLAY</button>
             </div>
         </div>
     </div>
